# repocanon

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  pyproject.toml
.cursor/rules/: code-style-and-conventions.mdc  commands-and-validation.mdc  project-overview.mdc  scope-test.mdc
.github/: copilot-instructions.md
.github/instructions/: tests.instructions.md
.github/workflows/: ci.yml  release.yml
.repocanon/: config.toml
docs/samples/: README.md
docs/samples/fastapi_app/: AGENTS.md  CLAUDE.md
docs/samples/fastapi_app/dot-cursor/rules/: architecture-boundaries.mdc  code-style-and-conventions.mdc  commands-and-validation.mdc  project-overview.mdc  scope-migrations.mdc  scope-test.mdc
docs/samples/fastapi_app/dot-github/: copilot-instructions.md
docs/samples/fastapi_app/dot-github/instructions/: alembic.instructions.md  tests.instructions.md
docs/samples/go_app/: AGENTS.md  CLAUDE.md
docs/samples/go_app/dot-cursor/rules/: architecture-boundaries.mdc  commands-and-validation.mdc  project-overview.mdc  scope-binaries.mdc  scope-internal.mdc
docs/samples/go_app/dot-github/: copilot-instructions.md
docs/samples/go_app/dot-github/instructions/: internal.instructions.md
docs/samples/monorepo/: AGENTS.md  CLAUDE.md
docs/samples/monorepo/dot-cursor/rules/: architecture-boundaries.mdc  code-style-and-conventions.mdc  commands-and-validation.mdc  project-overview.mdc  scope-apps.mdc  scope-monorepo-apps.mdc  scope-monorepo-packages.mdc  scope-packages.mdc
docs/samples/monorepo/dot-github/: copilot-instructions.md
docs/samples/monorepo/dot-github/instructions/: packages.instructions.md
docs/samples/nextjs_app/: AGENTS.md  CLAUDE.md
docs/samples/nextjs_app/dot-cursor/rules/: architecture-boundaries.mdc  code-style-and-conventions.mdc  commands-and-validation.mdc  project-overview.mdc  scope-test.mdc
docs/samples/nextjs_app/dot-github/: copilot-instructions.md
repocanon/: __init__.py  __main__.py  cli.py  config.py
repocanon/analyzer/: __init__.py  command_detect.py  config_parse.py  conventions_infer.py  file_inventory.py  framework_detect.py  repo_scan.py  topology_infer.py
repocanon/generators/: __init__.py  agents_md.py  claude_md.py  common.py  copilot.py  cursor_rules.py
repocanon/models/: __init__.py  findings.py  outputs.py  project.py
repocanon/output/: __init__.py  diff.py  preview.py  write_files.py
repocanon/report/: __init__.py  audit.py  summarize.py
repocanon/utils/: __init__.py  fs.py  hashing.py  logging.py  text.py
scripts/: demo.sh  publish.sh  regen_samples.sh
tests/: conftest.py  test_analyzer.py  test_cli.py  test_edge_cases.py  test_generators.py  test_models.py
tests/fixtures/fastapi_app/: Makefile  README.md  pyproject.toml
tests/fixtures/fastapi_app/.repocanon/: project-model.json
tests/fixtures/fastapi_app/alembic/: env.py
tests/fixtures/fastapi_app/app/: routes.py
tests/fixtures/fastapi_app/tests/: test_health.py  test_items.py
tests/fixtures/go_app/: Makefile  README.md  go.mod
tests/fixtures/go_app/internal/store/: store.go  (+1 more)
tests/fixtures/monorepo/: README.md  package.json
tests/fixtures/nextjs_app/: README.md  package.json  tsconfig.json
(+4 files in other folders)
