[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "repocanon"
version = "0.2.0"
description = "Analyze a local repository and generate AI-readable project instruction files from a single repo model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "Nihar Shah" }
]
keywords = [
  "ai",
  "cli",
  "codex",
  "claude",
  "copilot",
  "cursor",
  "developer-tools",
  "repo-analysis",
  "repository",
  "prompt-engineering"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities"
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
  "types-PyYAML>=6.0.12.20240311",
  "build>=1.2.1",
  "twine>=5.1.0"
]

[project.urls]
Homepage = "https://github.com/NehharShah/repocanon"
Repository = "https://github.com/NehharShah/repocanon"
Issues = "https://github.com/NehharShah/repocanon/issues"
Changelog = "https://github.com/NehharShah/repocanon/blob/main/CHANGELOG.md"

[project.scripts]
repocanon = "repocanon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["repocanon"]

[tool.hatch.build.targets.sdist]
include = [
  "repocanon",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
  "CONTRIBUTING.md",
  "pyproject.toml"
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008", "UP007"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/fixtures", "tests/fixtures/*"]
python_classes = ["Test*Case", "*TestSuite"]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::pytest.PytestCollectionWarning",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
exclude = ["tests/fixtures/.*"]
plugins = []

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_untyped_decorators = false
