[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-app"
version = "0.1.0"
description = "Fixture FastAPI service used in RepoCanon tests."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.7",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
